--- a/styles.css
+++ b/styles.css
@@ -1322,6 +1322,9 @@ body.browser-firefox .rainbow-border::before {
 
 
 @media(max-width:900px){
+  #center-nav {
+    margin-top: -20vh;
+  }
     #center-nav ul li a {
         font-size: 24vw;
         text-align: center;
@@ -1335,6 +1338,10 @@ body.browser-firefox .rainbow-border::before {
     }
     .enter-page .wrapper {
         width: 100%;
+        height: 120vh;
+    }
+    body.enter-page::after{
+      height: 120vh;
     }
     #center-nav ul li a::after {
         top: 0;
@@ -1468,14 +1475,15 @@ body.browser-firefox .rainbow-border::before {
           -ms-flex-pack: center;
               justify-content: center;
       background: none;
+      display: none;
     }
     .list-text {
       padding: 10px 20px;
       width: calc(100% - 40px);
     }
     .list-text ul li:nth-child(odd) {
-        width: calc(50% - 12px);
-        padding-right: 12px;
+        width: calc(50% - 22px);
+        padding-right: 22px;
     }
     .list-icons i {
         margin: 4px 10px;
@@ -1493,4 +1501,5 @@ body.browser-firefox .rainbow-border::before {
     body.te {
       font-size: 1.2em;
     }
+
 }
